docs-archive/apache-airflow-providers-informatica/0.1.0/_sources/_api/airflow/providers/informatica/hooks/edc/index.rst.txt
airflow.providers.informatica.hooks.edc
=======================================

.. py:module:: airflow.providers.informatica.hooks.edc


Exceptions
----------

.. autoapisummary::

   airflow.providers.informatica.hooks.edc.InformaticaEDCError


Classes
-------

.. autoapisummary::

   airflow.providers.informatica.hooks.edc.InformaticaConnectionConfig
   airflow.providers.informatica.hooks.edc.InformaticaEDCHook


Module Contents
---------------

.. py:exception:: InformaticaEDCError

   Bases: :py:obj:`RuntimeError`


   Raised when the Informatica Enterprise Data Catalog API returns an error.


.. py:class:: InformaticaConnectionConfig

   Container for Informatica EDC connection settings.


   .. py:attribute:: base_url
      :type:  str


   .. py:attribute:: username
      :type:  str | None


   .. py:attribute:: password
      :type:  str | None


   .. py:attribute:: security_domain
      :type:  str | None


   .. py:attribute:: verify_ssl
      :type:  bool


   .. py:attribute:: request_timeout
      :type:  int


   .. py:attribute:: provider_id
      :type:  str


   .. py:attribute:: modified_by
      :type:  str | None


   .. py:property:: auth_header
      :type: str | None


      Return the authorization header for the configured credentials.



.. py:class:: InformaticaEDCHook(informatica_edc_conn_id = default_conn_name, *, request_timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpHook`


   Hook providing a minimal client for the Informatica EDC REST API.


   .. py:attribute:: conn_name_attr
      :value: 'informatica_edc_conn_id'



   .. py:attribute:: default_conn_name


   .. py:attribute:: conn_type
      :value: 'informatica_edc'



   .. py:attribute:: hook_name
      :value: 'Informatica EDC'



   .. py:property:: config
      :type: InformaticaConnectionConfig


      Return cached connection configuration.



   .. py:method:: close_session()


   .. py:method:: get_conn(headers = None, extra_options = None)

      Return a configured session augmented with Informatica specific headers.



   .. py:method:: get_object(object_id, include_ref_objects = False)

      Retrieve a catalog object by its identifier.



   .. py:method:: create_lineage_link(source_object_id, target_object_id)

      Create a lineage relationship between source and target objects.



